<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/thingsLogo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/things_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/todoDetailsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_rounded_white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thingsLogo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:text="@string/todo_task_field_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/todoTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/todo_task_placeholder"
            android:inputType="textCapSentences">

            <requestFocus />

        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorBorder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:text="@string/todo_note_field_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/todoNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="top"
            android:hint="@string/todo_note_placeholder"
            android:inputType="textMultiLine"
            android:lines="3" />

    </LinearLayout>

    <Button
        android:id="@+id/addTodoButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rounded_accent"
        android:text="@string/todo_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todoDetailsLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
